tests/diagnostics/catalog/snapshots/ir/IR0026.snap
error[IR0026]: IR_E_INVALID_ATTRIBUTE
 --> tests/diagnostics/catalog/sources/ir/IR0026.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0026
  = help: keep IR validation diagnostics structured and catalog-backed
